libstdc++-v3/testsuite/23_containers/forward_list/requirements/dr438/insert_neg.cc
// { dg-do compile { target c++11 } }

// Copyright (C) 2009-2019 Free Software Foundation, Inc.
//
// This file is part of the GNU ISO C++ Library.  This library is free
// software; you can redistribute it and/or modify it under the
// terms of the GNU General Public License as published by the
// Free Software Foundation; either version 3, or (at your option)
// any later version.

// This library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.

// You should have received a copy of the GNU General Public License along
// with this library; see the file COPYING3.  If not see
// <http://www.gnu.org/licenses/>.

#include <forward_list>

struct A
{
  explicit A(int) { }
};

void f()
{
  typedef std::forward_list<A> test_type;
  test_type l;
  l.insert_after(l.begin(), 10, 1); // { dg-error "no matching" }
}

// { dg-prune-output "iterator_traits" }
